--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -36,14 +36,14 @@
 		bg:					#312450,
 		bg-alt:				darken(#312450, 5),
 		fg:					rgba(255,255,255,0.55),
-		fg-bold:			#ffffff,
+		fg-bold:			#FCFAF9;,
 		fg-light:			rgba(255,255,255,0.35),
 		border:				rgba(255,255,255,0.15),
 		border-bg:			rgba(255,255,255,0.05),
-		accent1:			#5e42a6,
-		accent1-alt:		darken(#5e42a6, 10),
-		accent2:			#5052b5,
-		accent2-alt:		darken(#5052b5, 10),
-		accent3:			#b74e91,
-		accent3-alt:		darken(#b74e91, 10)
+		accent1:			#9A8C98,
+		accent1-alt:		darken(#9A8C98, 10),
+		accent2:			#9A8C98,
+		accent2-alt:		darken(#9A8C98, 10),
+		accent3:			#4A4E69,
+		accent3-alt:		darken(#4A4E69, 10)
 	);
