--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3844,7 +3844,7 @@ div.tableauPlaceholder {
 			}
 
 			#sidebar nav a:before {
-				background: #C9ADA7;
+				background: #4a4e69;
 			}
 
 			#sidebar nav a:after {
