--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #9a8c98;
+		background: #f3ebe6;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -115,7 +115,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.55);
+		color: #4A4E69;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -162,7 +162,7 @@ input, select, textarea {
 		}
 
 	strong, b {
-		color: #FCFAF9;
+		color: #22223b;
 		font-weight: bold;
 	}
 
@@ -175,7 +175,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #FCFAF9;
+		color: #4a4e69;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
@@ -1833,9 +1833,9 @@ input, select, textarea {
 		transition: border-color 0.2s ease;
 		background-color: transparent;
 		border: solid 1px !important;
-		border-color: rgba(255, 255, 255, 0.15) !important;
+		border-color: rgba(74, 78, 105, 0.15) !important;
 		border-radius: 3em;
-		color: #FCFAF9 !important;
+		color: #4a4e69 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.6em;
@@ -1978,7 +1978,7 @@ input, select, textarea {
 
 /* Features */
 	.projects {
-		color: #4A4E69;
+		color: #726d81;
 	}
 	.features {
 		display: -moz-flex;
@@ -1991,7 +1991,7 @@ input, select, textarea {
 		flex-wrap: wrap;
 		border-radius: 0.25em;
 		border: solid 1px rgba(255, 255, 255, 0.15);
-		background: rgba(255, 255, 255, 0.05);
+		background: rgba(255, 255, 255, 0.2);
 		margin: 0 0 2em 0;
 	}
 
@@ -2206,7 +2206,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			.features section {
-				padding: 2.5em 1.5em 0.1em 5.5em ;
+				padding: 1.5 2.5em;
 			}
 
 				.features section .icon {
@@ -3208,13 +3208,13 @@ input, select, textarea {
 	}
 
 		table tbody tr {
-			border: solid 1px rgba(255, 255, 255, 0.15);
+			border: solid 1px rgba(74, 78, 105, 0.15);
 			border-left: 0;
 			border-right: 0;
 		}
 
 			table tbody tr:nth-child(2n + 1) {
-				background-color: rgba(255, 255, 255, 0.05);
+				background-color: rgba(74, 78, 105, 0.05);
 			}
 
 		table td {
@@ -3230,11 +3230,11 @@ input, select, textarea {
 		}
 
 		table thead {
-			border-bottom: solid 2px rgba(255, 255, 255, 0.15);
+			border-bottom: solid 2px rgba(74, 78, 105, 0.15);
 		}
 
 		table tfoot {
-			border-top: solid 2px rgba(255, 255, 255, 0.15);
+			border-top: solid 2px rgba(74, 78, 105, 0.15);
 		}
 
 		table.alt {
@@ -3242,7 +3242,7 @@ input, select, textarea {
 		}
 
 			table.alt tbody tr td {
-				border: solid 1px rgba(255, 255, 255, 0.15);
+				border: solid 1px rgba(74, 78, 105, 0.15);
 				border-left-width: 0;
 				border-top-width: 0;
 			}
@@ -3322,16 +3322,16 @@ div.tableauPlaceholder {
 				color: #4A4E69;
 			}
 			a.button.scrolly {
-				background-color: #9A8C98;
+				background-color: transparent;
 			}
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #9a8c98;
 		}
 
 		.wrapper.style2 {
-			background-color: #9A8C98;
+			background-color: #F8F3F0;
 		}
 
 		.wrapper.style2-alt {
@@ -3339,7 +3339,7 @@ div.tableauPlaceholder {
 		}
 
 		.wrapper.style3 {
-			background-color: #4A4E69;
+			background-color: #E4D6D3;
 		}
 
 		.wrapper.style3-alt {
@@ -3596,7 +3596,7 @@ div.tableauPlaceholder {
 
 	#footer > .inner .menu {
 		font-size: 0.8em;
-		color: rgba(255, 255, 255, 0.15);
+		color: rgba(255, 255, 255, 0.45);
 	}
 
 	#header + #wrapper + #footer > .inner {
@@ -3820,7 +3820,7 @@ div.tableauPlaceholder {
 			-ms-transition: color 0.2s ease;
 			transition: color 0.2s ease;
 			border: 0;
-			color: rgba(255, 255, 255, 0.35);
+			color: #F2E9E4;
 			display: block;
 			font-size: 0.6em;
 			font-weight: bold;
@@ -3844,7 +3844,7 @@ div.tableauPlaceholder {
 			}
 
 			#sidebar nav a:before {
-				background: #4a4e69;
+				background: rgba(74, 78, 105, .4);
 			}
 
 			#sidebar nav a:after {
