add font; update images; start i18n project page;

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	background-color: transparent;
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
@@ -116,7 +117,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #4A4E69;
-		font-family: Arial, Helvetica, sans-serif;
+		font-family: 'Noto Sans', serif;
 		font-size: 16.5pt;
 		font-weight: normal;
 		line-height: 1.75;
@@ -162,7 +163,7 @@ input, select, textarea {
 		}
 
 	strong, b {
-		color: #22223b;
+		/* color: #22223b; */
 		font-weight: bold;
 	}
 
@@ -170,9 +171,9 @@ input, select, textarea {
 		font-style: italic;
 	}
 
-	p {
+	/* p {
 		margin: 0 0 2em 0;
-	}
+	} */
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #4a4e69;
@@ -1796,7 +1797,6 @@ input, select, textarea {
 		}
 
 /* Box */
-
 	.box {
 		border-radius: 0.25em;
 		border: solid 1px rgba(255, 255, 255, 0.15);
@@ -1977,9 +1977,6 @@ input, select, textarea {
 				}
 
 /* Features */
-	.projects {
-		color: #726d81;
-	}
 	.features {
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -1995,16 +1992,83 @@ input, select, textarea {
 		margin: 0 0 2em 0;
 	}
 
-		.features section {
-			padding: 2em;
-			/* width: 50%; */
-			border-top: solid 1px rgba(255, 255, 255, 0.15);
-			position: relative;
-			.projimage {
-				float: left;
-				padding: 0 1em;
+	.features section {
+		padding: 2em 2.5em;
+		border-top: solid 1px rgba(255, 255, 255, 0.15);
+		position: relative;
+		.projimage {
+			float: left;
+			padding: 0 1em;
+			background-color: transparent;
+		}
+		.projimage.urbangems {
+			float: right;
+		}
+		ul {
+			justify-content: space-between;
+		}
+	}
+	.features section.project {
+		/* order: 1; */
+		padding: 1.5em;
+		/* flex-grow: 1; */
+		width: 50%;
+		flex-shrink: 3;
+		align-content: center;
+		ul, ol, li {
+			list-style-type: none;
+			margin: 0;
+			padding: 0 0 8px 0 ;
+			span {
+				padding-right: 8px;
 			}
 		}
+		img {
+			width: 100%;
+		}
+	}
+	@media screen and (max-width: 980px) {
+		/* .features {
+			display: block;
+		} */
+		/* .features section {
+			border-top-width: 1px !important;
+			border-left-width: 0 !important;
+			width: 100%;
+			.projimage {
+				width: 100%;
+				margin: 1em 0;
+			} */
+		/* } */
+		.features section:first-child {
+			border-top-width: 0 !important;
+		}
+	}
+
+	@media screen and (max-width: 736px) {
+		.features {
+			display: block;
+		}
+		/* .features section {
+			padding: 1.5em 2.5em;
+		} */
+			.features section .icon {
+				left: 1.5em;
+				top: 2em;
+			}
+
+	}
+
+	@media screen and (max-width: 480px) {
+		/* .features section {
+			padding: 2em 1.5em 0.1em 1.5em ;
+		} */
+			.features section .icon {
+				left: 0;
+				position: relative;
+				top: 0;
+			}
+	}
 
 			.features section:nth-child(-n + 2) {
 				border-top-width: 0;
@@ -2179,55 +2243,6 @@ input, select, textarea {
 			-ms-transform: scale(0.5);
 			transform: scale(0.5);
 			opacity: 0;
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.features {
-				display: block;
-			}
-
-				.features section {
-					border-top-width: 1px !important;
-					border-left-width: 0 !important;
-					width: 100%;
-					.projimage {
-						width: 100%;
-						margin: 1em 0;
-					}
-				}
-
-					.features section:first-child {
-						border-top-width: 0 !important;
-					}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.features section {
-				padding: 1.5 2.5em;
-			}
-
-				.features section .icon {
-					left: 1.5em;
-					top: 2em;
-				}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			.features section {
-				padding: 2em 1.5em 0.1em 1.5em ;
-			}
-
-				.features section .icon {
-					left: 0;
-					position: relative;
-					top: 0;
-				}
-
 		}
 
 /* Form */
@@ -3067,22 +3082,6 @@ input, select, textarea {
 			}
 		}
 	}
-
-	/* @media screen and (max-width: 736px) {
-		section > div.content.intro {
-			flex-wrap: nowrap;
-			justify-content: space-between;
-			align-items: center;
-			h1 {
-				width: 70%;
-				flex-grow: 2;
-			}
-			a.photo {
-				width: 20%;
-				flex-grow: 1;
-			}
-		}			
-	} */
 		
 			.spotlights > section > .image:before {
 				-moz-transition: opacity 1s ease;
@@ -3994,7 +3993,6 @@ div.tableauPlaceholder {
 .projimage {
 	object-fit: contain;
 	height: 15em;
-	width: 15em;
 	h3, p {
 		display: inline-block;
 	}
