reorder projects; image resize

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2017,7 +2017,7 @@ input, select, textarea {
 	.features section.project.top {
 		padding-bottom: 0;
 	}
-	.flowchart {
+	img.flowchart {
 		width: 100%;
 	}
 	.features section.project {
