--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,10 @@ body {
 	line-height: 1;
 }
 
+.content a {
+	margin: 1.5em 0 0;
+}
+
 ol, ul {
 	list-style: none;
 }
@@ -2003,13 +2007,9 @@ input, select, textarea {
 			padding: 1.5em 0;
 		}
 		.projimage {
-			float: left;
-			padding: 0 2em 0 0;
 			background-color: transparent;
 		}
-		.projimage.urbangems {
-			float: right;
-		}
+
 	}
 	.features section.project.top > h2 {
 		margin-bottom: 0;	
@@ -2043,9 +2043,6 @@ input, select, textarea {
 	}
 	
 	@media screen and (max-width: 980px) {
-		/* .features {
-			display: block;
-		} */
 		.features section.project {
 			/* border-top-width: 1px !important;
 			border-left-width: 0 !important; */
@@ -2068,7 +2065,7 @@ input, select, textarea {
 		.features {
 			display: block;
 		}
-		.features section {
+		.features section.project {
 			padding: 1.5em 2.5em;
 			width: 100%;
 			.projimage {
@@ -2084,14 +2081,11 @@ input, select, textarea {
 	}
 
 	@media screen and (max-width: 480px) {
-		/* .features section {
-			padding: 2em 1.5em 0.1em 1.5em ;
-		} */
-			.features section .icon {
-				left: 0;
-				position: relative;
-				top: 0;
-			}
+		.features section .icon {
+			left: 0;
+			position: relative;
+			top: 0;
+		}
 	}
 
 			.features section:nth-child(-n + 2) {
@@ -3062,12 +3056,15 @@ input, select, textarea {
 			width: 25em;
 		}
 
-	section > div.content.intro {
+	.welcome {
 		display: flex;
 		flex-direction: row;
-		a.photo > img {
+		flex-wrap: wrap;
+		align-items: center;
+		img {
 			width: 100%;
 			clip-path: circle();
+			max-width: 20em;
 		}
 	}
 	section > div.content > {
@@ -3075,24 +3072,16 @@ input, select, textarea {
 			width: 100%;			
 		}
 	}
+	.projimage {
+		object-fit: contain;
+		width: 100%;
+		max-height: 20em;
+		 p {
+			display: inline-block;
+		}
+	}
 	
 	@media screen and (max-width: 1680px) {
-		section > div.content.intro {
-			justify-content: center;
-			align-items: center;
-			flex-wrap: wrap;
-			/* h1, h3 { */
-			h1 {
-				width: 100%;
-				flex-grow: 1;
-				text-align: center;
-			}
-			a.photo {
-				width: 70%;
-				flex-grow: 1;
-				margin: 0 2em;
-			}
-		}
 		section > div.content > {
 			img {
 				width: 70%;
@@ -3103,21 +3092,6 @@ input, select, textarea {
 	}
 	
 	@media screen and (max-width: 980px) {
-		section > div.content.intro {
-			justify-content: center;
-			align-items: center;
-			flex-wrap: nowrap;
-			h1 {
-				width: 100%;
-				flex-grow: 1;
-				text-align: center;
-			}
-			a.photo {
-				width: 70%;
-				flex-grow: 1;
-				margin: 0 2em;
-			}
-		}
 		section > div.content > {
 			img {
 				width: 70%;
@@ -3143,34 +3117,24 @@ input, select, textarea {
 				width: 100%;
 			}
 
-		.spotlights > section > .content {
-			padding: 4em 5em 2em 5em ;
+		.spotlights > section > .content, section.portfolio-project {
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
 			display: flex;
-			-moz-flex-direction: column;
-			-webkit-flex-direction: column;
-			-ms-flex-direction: column;
-			flex-direction: column;
+			flex-wrap: wrap;
 			-moz-justify-content: center;
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
 			justify-content: center;
-			width: 50em;
 			-ms-flex: 1;
+			align-items: flex-start;
 		}
 
 		.features section a.button.scrolly {
 			margin: 1.5em 0 0 0
 		}
 
-		/* .spotlights > section > .content.image {
-			width: 40em;
-		}
-		.spotlights > section > .content.projcontent {
-			width: 60em;
-		} */
 			.spotlights > section > .content > .inner {
 				-moz-transform: translateX(0) translateY(0);
 				-webkit-transform: translateX(0) translateY(0);
@@ -3210,8 +3174,9 @@ input, select, textarea {
 	}
 	
 	@media screen and (max-width: 1680px) {
-		.spotlights > section > .content {
-			padding: 1em 2em;
+		.portfolio-project > .content, .welcome .content  {
+			width: 50%;
+			padding: 2em;
 		}
 		.video iframe {
 			height: 400px;
@@ -3220,6 +3185,10 @@ input, select, textarea {
 	}
 
 	@media screen and (max-width: 980px) {
+		.portfolio-project > .content, .welcome .content {
+			width: 50%;
+			padding: 2em 1em;
+		}
 		.video iframe {
 			height: 100%;
 			padding: 0;
@@ -3227,11 +3196,9 @@ input, select, textarea {
 		.spotlights > section {
 			display: block;  
 		}
-		.spotlights > section > .content {
-			width: 100%;
-		}
 		.spotlights > section.inactive > .content > .inner,
-		body.is-preload .spotlights > section > .content > .inner {
+		body.is-preload .spotlights > section > .content > .inner,
+		body.is-preload .spotlights > .inner > section > .content > .inner {
 			-moz-transform: translateY(1em);
 			-webkit-transform: translateY(1em);
 			-ms-transform: translateY(1em);
@@ -3240,11 +3207,10 @@ input, select, textarea {
 	}
 
 	@media screen and (max-width: 736px) {
-		/* .spotlights > section > .image {
-			min-height: 15em;
-		} */
-		.spotlights > section > .content {
-			padding: 1em 2em;
+
+		.portfolio-project > .content, .welcome .content {
+			width: 100%;
+			padding: 1em;
 		}
 	}
 
@@ -4044,14 +4010,7 @@ div.tableauPlaceholder {
 
 		}
 
-.projimage {
-	object-fit: contain;
-	/* width: 100%; */
-	max-height: 20em;
-	 p {
-		display: inline-block;
-	}
-}
+
 .features > section.process-list {
 	padding: 1em 3em;
 	ul {
